don't allow mix of percents and integers in functional-style colour declarations since it is explicitely disallowed by CSS 2.1

BUG: 193434

svn path=/trunk/KDE/kdelibs/; revision=971234